# poseidon

./: README.md  index.html  pyproject.toml
assets/: poseidon_poster_tiles.dzi
assets/css/: index.css
assets/poseidon_poster_tiles_files/: vips-properties.xml
configs/: README.md  run.yaml  sweep.yaml
scOT/: inference.py  metrics.py  model.py  train.py  trainer.py  utils.py
scOT/problems/: base.py
scOT/problems/elliptic/: helmholtz.py  poisson.py
scOT/problems/fluids/: compressible.py  incompressible.py  normalization_constants.py
scOT/problems/reaction_diffusion/: allen_cahn.py
scOT/problems/wave/: acoustic.py
